; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_externals.c_svn_wc__externals_gather_definitions.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_externals.c_svn_wc__externals_gather_definitions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { i64 }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_15__ = type { i32 }

@svn_depth_infinity = common dso_local global i64 0, align 8
@svn_depth_unknown = common dso_local global i64 0, align 8
@SVN_PROP_EXTERNALS = common dso_local global i32 0, align 4
@SVN_ERR_WC_PATH_NOT_FOUND = common dso_local global i64 0, align 8
@SVN_NO_ERROR = common dso_local global %struct.TYPE_16__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_16__* @svn_wc__externals_gather_definitions(i32** %0, i32** %1, %struct.TYPE_14__* %2, i8* %3, i64 %4, i32* %5, i32* %6) #0 {
  %8 = alloca %struct.TYPE_16__*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32**, align 8
  %11 = alloca %struct.TYPE_14__*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_15__*, align 8
  %17 = alloca %struct.TYPE_16__*, align 8
  %18 = alloca i64, align 8
  store i32** %0, i32*** %9, align 8
  store i32** %1, i32*** %10, align 8
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %11, align 8
  store i8* %3, i8** %12, align 8
  store i64 %4, i64* %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  %19 = load i64, i64* %13, align 8
  %20 = load i64, i64* @svn_depth_infinity, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %26, label %22

22:                                               ; preds = %7
  %23 = load i64, i64* %13, align 8
  %24 = load i64, i64* @svn_depth_unknown, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %37

26:                                               ; preds = %22, %7
  %27 = load i32**, i32*** %9, align 8
  %28 = load i32**, i32*** %10, align 8
  %29 = load %struct.TYPE_14__*, %struct.TYPE_14__** %11, align 8
  %30 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i8*, i8** %12, align 8
  %33 = load i32*, i32** %14, align 8
  %34 = load i32*, i32** %15, align 8
  %35 = call %struct.TYPE_16__* @svn_wc__db_externals_gather_definitions(i32** %27, i32** %28, i32 %31, i8* %32, i32* %33, i32* %34)
  %36 = call %struct.TYPE_16__* @svn_error_trace(%struct.TYPE_16__* %35)
  store %struct.TYPE_16__* %36, %struct.TYPE_16__** %8, align 8
  br label %101

37:                                               ; preds = %22
  %38 = load i32*, i32** %14, align 8
  %39 = call i32* @apr_hash_make(i32* %38)
  %40 = load i32**, i32*** %9, align 8
  store i32* %39, i32** %40, align 8
  %41 = load i32*, i32** %14, align 8
  %42 = load i8*, i8** %12, align 8
  %43 = call i8* @apr_pstrdup(i32* %41, i8* %42)
  store i8* %43, i8** %12, align 8
  %44 = load %struct.TYPE_14__*, %struct.TYPE_14__** %11, align 8
  %45 = load i8*, i8** %12, align 8
  %46 = load i32, i32* @SVN_PROP_EXTERNALS, align 4
  %47 = load i32*, i32** %14, align 8
  %48 = load i32*, i32** %15, align 8
  %49 = call %struct.TYPE_16__* @svn_wc_prop_get2(%struct.TYPE_15__** %16, %struct.TYPE_14__* %44, i8* %45, i32 %46, i32* %47, i32* %48)
  store %struct.TYPE_16__* %49, %struct.TYPE_16__** %17, align 8
  %50 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  %51 = icmp ne %struct.TYPE_16__* %50, null
  br i1 %51, label %52, label %64

52:                                               ; preds = %37
  %53 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  %54 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i64, i64* @SVN_ERR_WC_PATH_NOT_FOUND, align 8
  %57 = icmp ne i64 %55, %56
  br i1 %57, label %58, label %61

58:                                               ; preds = %52
  %59 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  %60 = call %struct.TYPE_16__* @svn_error_trace(%struct.TYPE_16__* %59)
  store %struct.TYPE_16__* %60, %struct.TYPE_16__** %8, align 8
  br label %101

61:                                               ; preds = %52
  %62 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  %63 = call i32 @svn_error_clear(%struct.TYPE_16__* %62)
  store %struct.TYPE_15__* null, %struct.TYPE_15__** %16, align 8
  br label %64

64:                                               ; preds = %61, %37
  %65 = load %struct.TYPE_15__*, %struct.TYPE_15__** %16, align 8
  %66 = icmp ne %struct.TYPE_15__* %65, null
  br i1 %66, label %67, label %75

67:                                               ; preds = %64
  %68 = load i32**, i32*** %9, align 8
  %69 = load i32*, i32** %68, align 8
  %70 = load i8*, i8** %12, align 8
  %71 = load %struct.TYPE_15__*, %struct.TYPE_15__** %16, align 8
  %72 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 4
  %74 = call i32 @svn_hash_sets(i32* %69, i8* %70, i32 %73)
  br label %75

75:                                               ; preds = %67, %64
  %76 = load %struct.TYPE_15__*, %struct.TYPE_15__** %16, align 8
  %77 = icmp ne %struct.TYPE_15__* %76, null
  br i1 %77, label %78, label %99

78:                                               ; preds = %75
  %79 = load i32**, i32*** %10, align 8
  %80 = icmp ne i32** %79, null
  br i1 %80, label %81, label %99

81:                                               ; preds = %78
  %82 = load i32*, i32** %14, align 8
  %83 = call i32* @apr_hash_make(i32* %82)
  %84 = load i32**, i32*** %10, align 8
  store i32* %83, i32** %84, align 8
  %85 = load %struct.TYPE_14__*, %struct.TYPE_14__** %11, align 8
  %86 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 4
  %88 = load i8*, i8** %12, align 8
  %89 = load i32*, i32** %15, align 8
  %90 = load i32*, i32** %15, align 8
  %91 = call i32 @svn_wc__db_read_info(i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i64* %18, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32 %87, i8* %88, i32* %89, i32* %90)
  %92 = call i32 @SVN_ERR(i32 %91)
  %93 = load i32**, i32*** %10, align 8
  %94 = load i32*, i32** %93, align 8
  %95 = load i8*, i8** %12, align 8
  %96 = load i64, i64* %18, align 8
  %97 = call i32 @svn_depth_to_word(i64 %96)
  %98 = call i32 @svn_hash_sets(i32* %94, i8* %95, i32 %97)
  br label %99

99:                                               ; preds = %81, %78, %75
  %100 = load %struct.TYPE_16__*, %struct.TYPE_16__** @SVN_NO_ERROR, align 8
  store %struct.TYPE_16__* %100, %struct.TYPE_16__** %8, align 8
  br label %101

101:                                              ; preds = %99, %58, %26
  %102 = load %struct.TYPE_16__*, %struct.TYPE_16__** %8, align 8
  ret %struct.TYPE_16__* %102
}

declare dso_local %struct.TYPE_16__* @svn_error_trace(%struct.TYPE_16__*) #1

declare dso_local %struct.TYPE_16__* @svn_wc__db_externals_gather_definitions(i32**, i32**, i32, i8*, i32*, i32*) #1

declare dso_local i32* @apr_hash_make(i32*) #1

declare dso_local i8* @apr_pstrdup(i32*, i8*) #1

declare dso_local %struct.TYPE_16__* @svn_wc_prop_get2(%struct.TYPE_15__**, %struct.TYPE_14__*, i8*, i32, i32*, i32*) #1

declare dso_local i32 @svn_error_clear(%struct.TYPE_16__*) #1

declare dso_local i32 @svn_hash_sets(i32*, i8*, i32) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_wc__db_read_info(i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i64*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32, i8*, i32*, i32*) #1

declare dso_local i32 @svn_depth_to_word(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
